k8s/apps/external/truenas/tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: truenas
  namespace: truenas
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: truenas-passthrough
  hostnames: [ truenas.stonegarden.dev ]
  rules:
    - backendRefs: [ { name: truenas, port: 443 } ]
